// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Korean Live Radio Page A11y I can see the skip to content link 1`] = `"내용 보기"`;

exports[`AMP Korean Live Radio Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Korean Live Radio Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
  },
}
`;

exports[`AMP Korean Live Radio Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=57&p=korean.bbc_korean_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:ares:ws_media:live:bbc_korean_radio]&x2=[amp]&x3=[news-korean]&x4=[ko]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[BBC+코리아+라디오+-+BBC+News+코리아]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Korean Live Radio Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "player-live",
    "domain": "test.bbc.co.uk",
    "sections": "Korean, Korean - Radio",
    "title": "BBC 코리아 라디오 - BBC News 코리아",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Korean Live Radio Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP Korean Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/korean"`;

exports[`AMP Korean Live Radio Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC는 외부 사이트 및 타사 콘텐츠에 대한 책임을 지지 않습니다 외부 링크에 대한 본사 정책 보기"`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, 코리아",
  "url": "/korean",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 2`] = `
Object {
  "text": "BBC News를 신뢰할 수 있는 이유",
  "url": "https://www.bbc.com/korean/institutional-49283197",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 3`] = `
Object {
  "text": "이용 약관",
  "url": "https://www.bbc.co.uk/usingthebbc/terms/",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 4`] = `
Object {
  "text": "BBC 소개",
  "url": "https://www.bbc.co.uk/aboutthebbc",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 5`] = `
Object {
  "text": "개인정보취급방침",
  "url": "https://www.bbc.co.uk/usingthebbc/privacy/",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 6`] = `
Object {
  "text": "쿠키정책",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 7`] = `
Object {
  "text": "고객센터",
  "url": "https://www.bbc.com/korean/institutional-42224941",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Korean Live Radio Page Footer Link should match text and url 9`] = `
Object {
  "text": "외부 링크에 대한 본사 정책 보기",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP Korean Live Radio Page Header I can see the branding 1`] = `"BBC News, 코리아"`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "뉴스",
  "url": "/korean",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "비디오",
  "url": "/korean/media/video",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "다운로드",
  "url": "/korean/downloads",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "TOP 뉴스",
  "url": "/korean/popular/read",
}
`;

exports[`AMP Korean Live Radio Page Main heading should match text 1`] = `"BBC 코리아 라디오"`;

exports[`AMP Korean Live Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"오디오 플레이어"`;

exports[`AMP Korean Live Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_korean_radio/liveradio/ko/amp?morph_env=live"`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/korean/images/icons/icon-192x192.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-72x72.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-96x96.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-128x128.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-144x144.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-152x152.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-180x180.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-192x192.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-384x384.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-512x512.png",
}
`;

exports[`AMP Korean Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`AMP Korean Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Korean Live Radio Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Korean Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Korean Live Radio Page SEO Heading level 1 1`] = `"BBC 코리아 라디오"`;

exports[`AMP Korean Live Radio Page SEO Lang attribute 1`] = `"ko"`;

exports[`AMP Korean Live Radio Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "RadioChannel",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/korean.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
        "@type": "WebPage",
        "name": "BBC 코리아 라디오",
      },
      "url": "http://localhost:7080/korean/bbc_korean_radio/liveradio",
    },
  ],
}
`;

exports[`AMP Korean Live Radio Page SEO OG description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`AMP Korean Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`AMP Korean Live Radio Page SEO OG image alt 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG locale 1`] = `"ko-KO"`;

exports[`AMP Korean Live Radio Page SEO OG site name 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG type 1`] = `"website"`;

exports[`AMP Korean Live Radio Page SEO OG url 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`AMP Korean Live Radio Page SEO Page title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Korean Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Korean Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`AMP Korean Live Radio Page SEO Twitter description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`AMP Korean Live Radio Page SEO Twitter image alt 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`AMP Korean Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`AMP Korean Live Radio Page SEO Twitter title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page Summary should match text 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;
